--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "gwylio",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A file watcher and copier to get CopySauce out of my life",
   "main": "gwylio.js",
   "engines": {
-      "node": ">=0.12"
-    },
+    "node": ">=0.12"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,7 +14,9 @@
   "dependencies": {
     "chokidar": "^1.0.0-rc3",
     "commander": "^2.6.0",
-    "fs-sync": "^0.2.5"
+    "fs-extra": "^0.16.3",
+    "fs-sync": "^0.2.5",
+    "gaze": "^0.5.1"
   },
   "bin": {
     "gwylio": "gwylio.js"
